--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>inc/dec</title>
 </head>
 <body>
-    <input id="owo" type="number" value="0" min="0">
+    <input id="owo" type="number" value="0" min="0" readonly="readonly">
     <button id="plus" onclick="pluss()">+</button>
     <button id="plus" onclick="minus()">-</button>
 
